# cppswift

./: CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  main.cpp
cmake/: FindPoco.cmake
src/: CMakeLists.txt  account.cpp  account.h  connection.cpp  connection.h  container.cpp  container.h  object.cpp  object.h
src/auth/: auth_conn_info.h  auth_connection.cpp  auth_connection.h  authenticator.h  legacy_auth.cpp  legacy_auth.h  token.h
src/internal/: null_output_iterator.hh
src/net/: net.h
test/: CMakeLists.txt  GTest.cmake  account_test.cpp
